# gamestuff

flutterflamestuff/arontia/: README.md  pubspec.yaml
flutterflamestuff/arontia/android/app/: build.gradle.kts
flutterflamestuff/arontia/android/app/src/main/: AndroidManifest.xml
flutterflamestuff/arontia/android/app/src/main/kotlin/com/example/arontia/: MainActivity.kt
flutterflamestuff/arontia/ios/Runner/: Info.plist
flutterflamestuff/arontia/ios/Runner.xcodeproj/: project.pbxproj
flutterflamestuff/arontia/linux/: CMakeLists.txt
flutterflamestuff/arontia/linux/runner/: my_application.cc
flutterflamestuff/arontia/macos/Runner.xcodeproj/: project.pbxproj
flutterflamestuff/arontia/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutterflamestuff/arontia/macos/Runner/Configs/: AppInfo.xcconfig
flutterflamestuff/arontia/test/: widget_test.dart
flutterflamestuff/arontia/web/: index.html  manifest.json
flutterflamestuff/arontia/windows/: CMakeLists.txt
flutterflamestuff/arontia/windows/runner/: Runner.rc  main.cpp
pygamestuff/: README.md  pyproject.toml
pygamestuff/pygamestuff/: main.py  player.py
pygamestuff/pygamestuff/networking/: client_2.py  server_2.py
rustlike/: Cargo.toml
rustlike/src/: main.rs  map.rs  player.rs
