[project]
name = "pygamestuff"
version = "0.1.0"
description = ""
authors = [
    {name = "Shineaki",email = "halmos.adam@pm.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame-ce (>=2.5.5,<3.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
